# ObjectDetectionSampleSDD

./: CMakeLists.txt  Dockerfile  README.md
common/format_reader/: CMakeLists.txt
include/: ConfigProxy.hpp  IConfig.hpp  futils.h
src/: config.yaml  main.cpp  main_dnn.cpp
src/ConfigReader/: ConfigProxy.cpp
src/Utils/: Utility.cpp  db_timezone.csv
